Update frontend to point to Render backend

--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@
 
 <script>
   /* ── CONFIG ──────────────────────────────────────────────────────── */
-  const API = "http://127.0.0.1:8000";
+  const API = "https://seekr-gpou.onrender.com";
 
   /* ── SEARCH STATE ────────────────────────────────────────────────── */
   const S = {
